--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="hr"><hr></div>
         <div>Did not bat</div><div id="from2to8" > <c onmouseenter="info(id)" id="p7">Suresh Raina</c>, <c onmouseenter="info(id)" id="p8">Harbhajan Singh</c>, <c onmouseenter="info(id)" id="p9">Zaheer Khan</c>, <c onmouseenter="info(id)" id="p10">Munaf Patel</c>, <c onmouseenter="info(id)" id="p11">S Sreesanth</c></div>
     </div>
-<footer class="footer">Made with <img src="/assets/prograd-heart.svg"> by ProGrad</footer>
+<footer class="footer">Made with <img src="./assets/prograd-heart.svg"> by ProGrad</footer>
 <script src="./script.js"></script>
 </body>
 </html>
